2009-04-21  Murray Cumming  <murrayc@murrayc.com>

	docs/tutorial/clutter-tut.xml: Improved the text of the recent additions.

2009-04-21  Johannes Schmid <jschmid@openismus.com>
  
  * docs/tutorial/clutter-tut.xml: Added section about timeline markers
  and Gtk+ integration (#935)
  * examples/timeline/main.c: Added example for timeline markers

2009-04-20  Johannes Schmid <jschmid@openismus.com>

	* docs/tutorial/clutter-tut.xml: Fixed section about effects to
	use animation API 

2009-04-16  Johannes Schmid <jschmid@openismus.com>

	* examples/effects => examples/animation:
	Ported effects example to new animation API
	* examples/*: Fixed little API problems with clutter 0.9, espeicially
	moving from clutter_label_* to clutter_text_*

2008-12-15  Daniel Elstner  <danielk@openismus.com>

	* examples/behaviour/main.c: Follow API changes of clutter 0.9.
	* examples/custom_actor/triangle_actor.[ch]: ditto,
	* examples/custom_container/examplebox.[ch]: ditto,
	* examples/entry/main.c: ditto,
	* examples/full_example/main.c: ditto,
	* examples/multiline_text_entry/multiline_entry.[ch]: ditto,
	* examples/scrolling/scrollingcontainer.[ch]: ditto,
	* examples/stage_widget/main.c: ditto.

2008-12-15  Daniel Elstner  <danielk@openismus.com>

	* docs/tutorial/clutter-tut.xml: Remove references to
	BehaviourBspline, as its functionality was merged into
	BehaviourPath.

2008-12-15  Daniel Elstner  <danielk@openismus.com>

	* docs/tutorial/README: Fix copy'n'paste mistakes.

2008-12-15  Daniel Elstner  <danielk@openismus.com>

	* configure.ac: Remove some cruft.

2008-11-06  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Correct the version number in the 
	debian package name. Thanks to Derek Kraan.

2008-08-11  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/Makefile.am: Use the xhtml docbook xsl instead of html. 
	* docs/tutorial/clutter-tut.xml: Mention 0.8 instead of 0.7.
	* configure.ac: Depend on the -0.8 versions instead of 0.7.
