@@ -1,3 +1,13 @@
+2009-04-24  Murray Cumming  <murrayc@murrayc.com>
+
+	Correct the Animations and Behaviours updates.
+	 
+	* docs/tutorial/clutter-tut.xml: Animations: Make it clear that apps 
+	never need to use anything but the clutter_actor_animate() convenience 
+	functions. Move the ClutterAlpha description here, from the Behaviours 
+	chapter, because this is now the first mention. Remove mention of 
+	removed standard ClutterAlpha callbacks.
+
 2009-04-21  Murray Cumming  <murrayc@murrayc.com>
 
 	docs/tutorial/clutter-tut.xml: Improved the text of the recent additions.
